istioctl/pkg/writer/compare/testdata/clusterdiff.txt
--- Pilot Clusters
+++ Envoy Clusters
@@ -14,15 +14,15 @@
                "serviceName": "outbound|15004||istio-policy.istio-system.svc.cluster.local"
             },
             "connectTimeout": "1s",
             "maxRequestsPerConnection": 10000,
             "circuitBreakers": {
                "thresholds": [
                   {
-                     "maxRequests": 10000
+
                   }
                ]
             },
             "http2ProtocolOptions": {
                "maxConcurrentStreams": 1073741824
             }
          }
