istioctl/pkg/writer/compare/testdata/listenerdiff.txt
--- Pilot Listeners
+++ Envoy Listeners
@@ -82,17 +82,14 @@
                                                    "name": "mixer"
                                                 },
                                           {
                                                    "name": "envoy.cors"
                                                 },
                                           {
                                                    "name": "envoy.fault"
-                                                },
-                                          {
-                                                   "name": "envoy.router"
                                                 }
                                        ],
                                  "route_config": {
                                           "name": "8080",
                                           "validate_clusters": false,
                                           "virtual_hosts": [
                                                    {
